2011-01-24  Kenneth Zadeck  <zadeck@naturalbridge.com>

	* machmode.def: Fixed comments.
	
2011-01-24  Kai Tietz  <kai.tietz@onevision.com>

	* emit-rtl.c (reg_attrs_htab_hash): Replace long by intptr_t.

2011-01-24  Paul Koning  <ni1d@arrl.net>

	* builtins.c (c_readstr): Fix byte order if BYTES_BIG_ENDIAN !=
	WORDS_BIG_ENDIAN. 

2011-01-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/46519
	* config/i386/i386.c: Include sbitmap.h and fibheap.h.
	(block_info): Add scanned and prev.
	(move_or_delete_vzeroupper_2): Return if the basic block
	has been scanned and the upper 128bit state is unchanged
	from the last scan.
	(move_or_delete_vzeroupper_1): Return true if the exit
	state is changed.
	(move_or_delete_vzeroupper): Visit basic blocks using the
	work-list based algorithm based on vt_find_locations in
	var-tracking.c.

	* config/i386/t-i386: Also depend on sbitmap.h and $(FIBHEAP_H).

2011-01-24  Nick Clifton  <nickc@redhat.com>

	* config/v850/v850.opt (mv850es): New option - alias for -mv850e1.
	* config/v850/v850.h (ASM_SPEC): If -mv850es is specified pass
	-mv850e1 to the assembler.  If -mv850e1 or -mv850es is specified
	then define __v850e1__.
	* doc/invoke.texi: Document -mv850es.

2011-01-24  Richard Henderson  <rth@redhat.com>

	* config/rx/predicates.md (rx_fp_comparison_operator): Don't accept
	compound unordered comparisons.
	* config/rx/rx.c (rx_split_fp_compare): Remove.
	* config/rx/rx-protos.h: Update.
	* config/rx/rx.md (gcc_conds, rx_conds): Remove.
	(cbranchsf4): Don't call rx_split_fp_compare.
	(*cbranchsf4): Use rx_split_cbranch.
	(*cmpsf): Don't accept "i" constraint.
	(*conditional_branch): Only valid after reload.
	(cstoresf4): Merge expander with insn.  Don't call rx_split_fp_compare.

2011-01-24  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/47385
	* config/rs6000/altivec.md (vector constant splitters): Add
	support for creating vector single precision constants if -mvsx is